force-app/main/default/objects/BankCard__c/BankCard__c.object-meta.xml
<CustomObject>
    <label>BankCard</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CardID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BankCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>