force-app/main/default/objects/BankCard__c/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <label>CardNumber</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>