force-app/main/default/objects/BankCard__c/fields/CardOwner__c.field-meta.xml
<CustomField>
    <fullName>CardOwner__c</fullName>
    <label>CardOwner</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>