force-app/main/default/objects/BankCard__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>ExpiryDate</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>