force-app/main/default/objects/BankCard__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <label>UserID</label>
    <referenceTo>CUser__c</referenceTo>
    <relationshipLabel>BankCardRelatedList</relationshipLabel>
    <relationshipName>BankCards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>